--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
 <body>
   <div class="header">
     <img src="images/logo.png" alt="77 Series Association Logo" class="logo">
-    <h1>77 SERIES ASSOCIATION, ECR</h1>
-    <span>MEMBERS' DIRECTORY-2025</span>
+    <h1>MEMBERS' DIRECTORY-2025</h1>
+    <span>Bound by Friendship</span>
   </div>
 
   <div class="bar">
@@ -260,4 +260,5 @@
     };
   </script>
 </body>
+
 </html>
