--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 <body>
   <div class="header">
     <img src="images/logo.png" alt="77 Series Association Logo" class="logo">
-    <h1>77 SERIES ASSOCIATION</h1>
+    <h1>MEMBERS' DIRECTORY 2025</h1>
     <span>Bound by Friendship</span>
   </div>
 
@@ -189,12 +189,12 @@
   </div>
 
   <footer>
-    <p>© 2025 77 Series Association – Engineering College, Rajshahi<br>
-    <em>Heaven’s Light Is Our Guide</em></p>
+    <p>© 2025 77 Series Association>
+    <em>Engineering College, Rajshahi<br</em></p>
   </footer>
 
   <script>
-    const FLIPBOOK_ID = "26231c7492";
+    const FLIPBOOK_ID = "593070edb3";
     const BASE_URL = `https://heyzine.com/flip-book/${FLIPBOOK_ID}.html`;
 
     document.querySelector("iframe.fp-iframe").src = `${BASE_URL}#page/1`;
@@ -265,4 +265,5 @@
     };
   </script>
 </body>
+
 </html>
