--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
 <body>
   <div class="header">
     <img src="images/logo.png" alt="77 Series Association Logo" class="logo">
-    <h1>MEMBERS' DIRECTORY 2025</h1>
-    <span>Bound by Friendship</span>
+    <h1>MEMBERS' DIRECTORY</h1>
+    <span>77 Series Association, ECR</span>
   </div>
 
   <div class="bar">
@@ -189,8 +189,8 @@
   </div>
 
   <footer>
-    <p>© 2025 77 Series Association>
-    <em>Engineering College, Rajshahi<br</em></p>
+    <p>© 2025 77 Series Association<br>
+    <em>Engineering College, Rajshahi</em></p>
   </footer>
 
   <script>
@@ -267,3 +267,4 @@
 </body>
 
 </html>
+
