--- a/index.html
+++ b/index.html
@@ -15,38 +15,48 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: #2943B4; /* single blue theme */
+      background: #2943B4;
       color: #fff;
     }
 
     .header {
-      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 12px;
       padding: 20px 10px 10px;
+      flex-wrap: wrap;
+      text-align: left;
+    }
+
+    .header-text {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
 
     .logo {
       max-width: 120px;
       height: auto;
       border-radius: 12px;
-      margin-bottom: 10px;
     }
 
     .header h1 {
-      font-size: 22px;
-      margin: 4px 0;
+      font-size: 20px;
+      margin: 2px 0;
       color: #ffe680;
       letter-spacing: 1px;
     }
 
     .header h2 {
-      font-size: 18px;
-      margin: 4px 0;
+      font-size: 16px;
+      margin: 2px 0;
       color: #fff;
     }
 
     .header h3 {
-      font-size: 16px;
-      margin: 4px 0;
+      font-size: 14px;
+      margin: 2px 0;
       font-weight: 500;
       color: #fff;
     }
@@ -144,7 +154,7 @@
       width: 100%;
       height: 600px;
       display: block;
-      background: #000; /* black background inside iframe */
+      background: #000;
     }
 
     footer {
@@ -157,8 +167,19 @@
     }
 
     @media (max-width: 600px) {
-      .header h1 { font-size: 18px; }
-      .logo { max-width: 100px; }
+      .header {
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: flex-start;
+      }
+
+      .logo {
+        max-width: 80px;
+      }
+
+      .header h1 { font-size: 16px; }
+      .header h2 { font-size: 14px; }
+      .header h3 { font-size: 13px; }
       iframe.fp-iframe { height: 420px; }
     }
   </style>
@@ -166,9 +187,11 @@
 <body>
   <div class="header">
     <img src="images/logo.png" alt="77 Series Association Logo" class="logo">
-    <h1>MEMBERS' DIRECTORY 2025</h1>
-    <h2>77 SERIES ASSOCIATION</h2>
-    <h3>Engineering College, Rajshahi</h3>
+    <div class="header-text">
+      <h1>MEMBERS' DIRECTORY</h1>
+      <h2>77 SERIES ASSOCIATION</h2>
+      <h3>Engineering College, Rajshahi</h3>
+    </div>
   </div>
 
   <div class="bar">
@@ -190,11 +213,10 @@
 
   <footer>
     <p>©2025 77 Series Association, ECR<br>
-    Bound by Friendship</p>
+    </p>
   </footer>
 
   <script>
-    // Use the exact working embed URL from Heyzine
     const FULL_EMBED_URL = "https://heyzine.com/flip-book/593070edb3.html";
 
     const iframe = document.querySelector("iframe.fp-iframe");
