--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@ menu:hover {
 
     function messages() {iframe.src = `${FULL_EMBED_URL}#page/3`;
 document.querySelector('.embed-wrap').scrollIntoView({ behavior: 'smooth' });
+ document.getElementById('results').innerHTML = '';
 
 }
      function departed() {iframe.src = `${FULL_EMBED_URL}#page/7`;}
