--- a/index.html
+++ b/index.html
@@ -312,17 +312,47 @@ document.querySelector('.embed-wrap').scrollIntoView({ behavior: 'smooth' });
  document.getElementById('results').innerHTML = '';
 
 }
-     function departed() {iframe.src = `${FULL_EMBED_URL}#page/7`;}
+     function departed() {iframe.src = `${FULL_EMBED_URL}#page/7`;
+document.querySelector('.embed-wrap').scrollIntoView({ behavior: 'smooth' });
+ document.getElementById('results').innerHTML = '';
 
-   function members() {iframe.src = `${FULL_EMBED_URL}#page/12`;}
-function committees() {iframe.src = `${FULL_EMBED_URL}#page/100`;}
+}
+
+
+   function members() {iframe.src = `${FULL_EMBED_URL}#page/12`;
+document.querySelector('.embed-wrap').scrollIntoView({ behavior: 'smooth' });
+ document.getElementById('results').innerHTML = '';
+
+}
+
+function committees() {iframe.src = `${FULL_EMBED_URL}#page/100`;
+document.querySelector('.embed-wrap').scrollIntoView({ behavior: 'smooth' });
+ document.getElementById('results').innerHTML = '';
+
+}
+
   
- function events() {iframe.src = `${FULL_EMBED_URL}#page/104`;}
+ function events() {iframe.src = `${FULL_EMBED_URL}#page/104`;
+document.querySelector('.embed-wrap').scrollIntoView({ behavior: 'smooth' });
+ document.getElementById('results').innerHTML = '';
+
+}
 
 
-     function album() {iframe.src = `${FULL_EMBED_URL}#page/125`;}
-  
-   function constitution() {iframe.src = `${FULL_EMBED_URL}#page/112`;}
+
+     function album() {iframe.src = `${FULL_EMBED_URL}#page/125`;
+
+  document.querySelector('.embed-wrap').scrollIntoView({ behavior: 'smooth' });
+ document.getElementById('results').innerHTML = '';
+
+}
+
+   function constitution() {iframe.src = `${FULL_EMBED_URL}#page/112`;
+document.querySelector('.embed-wrap').scrollIntoView({ behavior: 'smooth' });
+ document.getElementById('results').innerHTML = '';
+
+}
+
     
     
  function refreshFlipbook() {
