--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     }
 
     .logo {
-      max-width: 140px;
+      max-width: 120px;
       height: auto;
-      border-radius: 12px;
+      border-radius: 8px;
     }
 
     .header h1 {
@@ -54,13 +54,7 @@
       color: #fff;
     }
 
-    .header h3 {
-      font-size: 14px;
-      margin: 2px 0;
-      font-weight: 500;
-      color: #fff;
-    }
-
+   
     .bar {
       text-align: center;
       margin: 6px 0;
@@ -201,7 +195,7 @@ menu:hover {
 
       .header h1 { font-size: 20px; }
       .header h2 { font-size: 16px; }
-      .header h3 { font-size: 14px; }
+      
       iframe.fp-iframe { height: 560px; }
     }
   </style>
@@ -211,9 +205,8 @@ menu:hover {
     <img src="images/logo.png" alt="77 Series Association Logo" class="logo">
     <div class="header-text"><br>
       <h1>MEMBERS' DIRECTORY</h1>
-      <h2>77 SERIES ASSOCIATION</h2>
-      <h3>Engineering College, Rajshahi</h3>
-    </div>
+      <h2>77 SERIES ASSOCIATION, ECR</h2>
+         </div>
   </div>
 
   <div class="bar">
@@ -259,7 +252,8 @@ menu:hover {
 
   <footer>
     <p>©2025 77 Series Association, ECR<br>
-    </p>
+    Created by Fazlul Haq Khokan
+</p>
   </footer>
 
   <script>
