--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       align-items: center;
       justify-content: center;
       gap: 12px;
-      padding: 10px 10px 10px;
+      padding: 8px 10px;
       flex-wrap: wrap;
       text-align: left;
     }
@@ -57,7 +57,7 @@
    
     .bar {
       text-align: center;
-      margin: 6px 0;
+      margin: 4px 0;
     }
 
     .search-row {
@@ -66,7 +66,7 @@
       align-items: center;
       gap: 6px;
       flex-wrap: wrap;
-      margin-bottom: 6px;
+      margin-bottom: 4px;
     }
 
     #searchBox {
@@ -118,8 +118,9 @@ menu:hover {
     .action-row {
       display: flex;
       justify-content: center;
-      gap: 12px;
+      gap: 8px;
       flex-wrap: wrap;
+margin: 4px 0;
     }
 
     #results {
@@ -152,14 +153,14 @@ menu:hover {
       border: 0;
       height: 2px;
       background: linear-gradient(to right, transparent, #ffe680, transparent);
-      margin: 12px auto;
+      margin: 10px auto;
       max-width: 800px;
     }
 
     .embed-wrap {
       width: 90%;
       max-width: 1000px;
-      margin: 20px auto;
+      margin: 10px auto;
       padding: 0 10px;
     }
 
@@ -203,7 +204,7 @@ menu:hover {
 <body>
   <div class="header">
     <img src="images/logo.png" alt="77 Series Association Logo" class="logo">
-    <div class="header-text"><br>
+    <div class="header-text">
       <h1>MEMBERS' DIRECTORY</h1>
       <h2>77 SERIES ASSOCIATION, ECR</h2>
          </div>
