--- a/index.html
+++ b/index.html
@@ -229,19 +229,19 @@ margin: 4px 0;
       <menu onclick="messages()" title="Messages">Messages</menu>
  <menu onclick="members()" title="Members">Members</menu>
    
-<menu onclick="album()" title="Album">Album</menu>
 
-<menu onclick="departed()" title="Reload Flipbook">Departed</menu>
+<menu onclick="departed()" title="Departed Souls">Departed</menu>
+<menu onclick="album()" title="Album">Album</menu>
 
 
 </div>
 
 <div class="action-row">
      
- <menu onclick="committees()" title="Album">Committees</menu>
+ <menu onclick="committees()" title="Committees">Committees</menu>
  <menu onclick="events()" title="Events">Events</menu>
 
-<menu onclick="constitution()" title="Reload Flipbook">Constitution</menu>
+<menu onclick="constitution()" title="Constitution">Constitution</menu>
 
 
 
