--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       border: 1px solid #ffe680;
       border-radius: 4px;
       width: 50%;
-      max-width: 150px;
+      max-width: 170px;
       background: #fff;
       color: #2943B4;
     }
@@ -83,7 +83,7 @@
       background: #ffe680;
       color: #2943B4;
       border: none;
-      padding: 6px 16px;
+      padding: 6px 10px;
       cursor: pointer;
       border-radius: 4px;
       font-weight: bold;
@@ -204,7 +204,7 @@ margin: 4px 0;
 <body>
   <div class="header">
     <img src="images/logo.png" alt="77 Series Association Logo" class="logo">
-    <div class="header-text">
+    <div class="header-text">	<br>
       <h1>MEMBERS' DIRECTORY</h1>
       <h2>77 SERIES ASSOCIATION, ECR</h2>
          </div>
