--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     }
 
     .header h1 {
-      font-size: 20px;
+      font-size:20px;
       margin: 2px 0;
       color: #ffe680;
       letter-spacing: 1px;
@@ -191,7 +191,7 @@ margin: 4px 0;
       }
 
       .logo {
-        max-width: 80px;
+        max-width: 100px;
       }
 
       .header h1 { font-size: 20px; }
@@ -204,7 +204,8 @@ margin: 4px 0;
 <body>
   <div class="header">
     <img src="images/logo.png" alt="77 Series Association Logo" class="logo">
-    <div class="header-text">	<br>
+    <div class="header-text">
+<br>
       <h1>MEMBERS' DIRECTORY</h1>
       <h2>77 SERIES ASSOCIATION, ECR</h2>
          </div>
