--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       box-shadow: 0 0 12px rgba(0,0,0,0.3);
       border-radius: 8px;
       width: 100%;
-      height: 500px;
+      height: 580px;
       display: block;
       background: #000;
     }
@@ -167,6 +167,7 @@
   <div class="banner">
     <img src="images/banner.png" alt="77 Series Association Banner" class="banner-img">
   </div>
+<hr class="gold-divider">
 
   <div class="bar">
     <div class="search-row">
