--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       box-shadow: 0 0 12px rgba(0,0,0,0.3);
       border-radius: 8px;
       width: 100%;
-      height: 650px;
+      height: 560px;
       display: block;
       background: #000;
     }
@@ -159,8 +159,14 @@
     }
 
     @media (max-width: 600px) {
-      iframe.fp-iframe { height: 420px; }
-    }
+      .header {
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: flex-start;
+      }
+
+ iframe.fp-iframe { height: 560px; }
+
   </style>
 </head>
 <body>
